--- a/css/infoacara.css
+++ b/css/infoacara.css
@@ -1644,8 +1644,9 @@ ol {
 
   .card {
     margin: 3rem;
-	width: 300px;
-	height: 350px;
+    margin-top: 20px;
+	width: 500px;
+	height: 600px;
 	padding: .5rem 1rem;
 	background-color: #f9f9f9;
 	border-radius: 20px;
@@ -1700,7 +1701,6 @@ ol {
   }
   .card .desc {
 	text-align: center;
-	margin-bottom: 20px;
   }
   .card .actions {
 	/* width: 100%; */
