--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ ol {
 
 .set-bg {
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain, cover;
 	background-position: top center;
 }
 
