--- a/css/style.css
+++ b/css/style.css
@@ -1643,12 +1643,12 @@ ol {
   }
 
   .card {
-	margin: 2rem;
+	/* margin: 2rem; */
 	width: 350px;
 	height: 400px;
 	padding: .5rem 1rem;
 	background-color: #f9f9f9;
-	border-radius: 20px;
+	border-radius: 30px;
 	box-shadow: 0 12px 32px 4px rgba(0, 0, 0, 0.2);
 	display: flex;
 	flex-direction: column;
