--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,15 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
-body {
-	padding-left: 90px;
-}
+/* body {
+	padding-left: 10px;
+} */
 
-@media (max-width: 420px) {
+/* @media (max-width: 420px) {
 	body {
 		padding-left: 60px;
 	}
-}
+} */
 
 h1,
 h2,
@@ -156,7 +156,7 @@ ol {
 	font-size: 16px;
 	padding: 17px 25px;
 	min-width: 170px;
-	color: #fff;
+	color: rgba(255, 255, 255, 0.513);
 	background: #000000;
 	line-height: 1;
 	letter-spacing: 1px;
@@ -717,7 +717,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
 }
 
 .about-section .about-left {
-	background: #ffffff;
+	background: #ffffff00;
 	-ms-flex: 0 0 47%;
 	-webkit-box-flex: 0;
 	flex: 0 0 47%;
