--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i&display=swap");
 
 
@@ -136,6 +135,10 @@ ol {
 	color: #fff;
 }
 
+.status {
+	color: #e21010;
+}
+
 /*---------------------
   Commom elements
 -----------------------*/
@@ -199,12 +202,14 @@ ol {
 		border: 4px solid #000000;
 		border-left-color: transparent;
 	}
+
 	50% {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
 		border: 4px solid #7a296f;
 		border-left-color: transparent;
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
@@ -219,11 +224,13 @@ ol {
 		border: 4px solid #000000;
 		border-left-color: transparent;
 	}
+
 	50% {
 		-webkit-transform: rotate(180deg);
 		border: 4px solid #7a296f;
 		border-left-color: transparent;
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		border: 4px solid #ff00d4;
@@ -535,6 +542,7 @@ ol {
 
 @media only screen and (min-width: 576px) and (max-width: 767px),
 only screen and (min-width: 768px) and (max-width: 991px) {
+
 	.pana-accordion-item .pa-text h2,
 	.hero-item .pa-text h2 {
 		font-size: 48px;
@@ -542,6 +550,7 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 }
 
 @media (max-width: 576px) {
+
 	.pana-accordion-item .pa-text h2,
 	.hero-item .pa-text h2 {
 		font-size: 36px;
@@ -549,6 +558,7 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 }
 
 @media (max-width: 420px) {
+
 	.pana-accordion-item .pa-text h2,
 	.hero-item .pa-text h2 {
 		font-size: 24px;
@@ -563,6 +573,7 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 }
 
 @media (max-width: 420px) {
+
 	.pana-accordion-item .pa-text h4,
 	.hero-item .pa-text h4 {
 		font-size: 16px;
@@ -1011,6 +1022,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
+
 	.grid-sizer,
 	.gallery-item {
 		width: 25%;
@@ -1019,6 +1031,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
 
 @media only screen and (min-width: 768px) and (max-width: 991px),
 only screen and (min-width: 576px) and (max-width: 767px) {
+
 	.grid-sizer,
 	.gallery-item {
 		width: 50%;
@@ -1026,6 +1039,7 @@ only screen and (min-width: 576px) and (max-width: 767px) {
 }
 
 @media (max-width: 576px) {
+
 	.grid-sizer,
 	.gallery-item {
 		width: 100%;
@@ -1188,6 +1202,7 @@ only screen and (min-width: 576px) and (max-width: 767px) {
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1440px) {
+
 	.blog-grid-sizer,
 	.blog-grid {
 		width: 25%;
@@ -1195,6 +1210,7 @@ only screen and (min-width: 576px) and (max-width: 767px) {
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
+
 	.blog-grid-sizer,
 	.blog-grid {
 		width: 33.333333%;
@@ -1203,6 +1219,7 @@ only screen and (min-width: 576px) and (max-width: 767px) {
 
 @media only screen and (min-width: 768px) and (max-width: 991px),
 only screen and (min-width: 576px) and (max-width: 767px) {
+
 	.blog-grid-sizer,
 	.blog-grid {
 		width: 50%;
@@ -1210,10 +1227,12 @@ only screen and (min-width: 576px) and (max-width: 767px) {
 }
 
 @media (max-width: 576px) {
+
 	.blog-grid-sizer,
 	.blog-grid {
 		width: 100%;
 	}
+
 	.blog-grid-sizer img,
 	.blog-grid img {
 		min-height: 250px;
