--- a/css/style.css
+++ b/css/style.css
@@ -938,7 +938,7 @@ only screen and (min-width: 576px) and (max-width: 767px),
 (max-width: 576px) {
 	.nice-scroll {
 		height: 100%;
-		overflow: hidden;
+		overflow: inherit;
 	}
 }
 
