--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,7 @@ ol {
 	bottom: 0;
 	width: 100%;
 	text-align: center;
-	padding: 0 15px;
+	padding: 0 5px;
 }
 
 @media (max-height: 500px) {
@@ -446,15 +446,15 @@ ol {
 	}
 }
 
-.sm-footer .sm-socail a {
+.sm-footer .sm-social a {
 	display: inline-block;
 	font-size: 18px;
 	color: #b2b2b2;
 	margin-right: 30px;
-	margin-bottom: 10px;
+	margin-bottom: 200px;
 }
 
-.sm-footer .sm-socail a:last-child {
+.sm-footer .sm-social a:last-child {
 	margin-right: 0;
 }
 
