--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,10 @@ html,body{
     height: 100vh;
 }
 
+.landingText {
+    font-family: Poppins;
+}
+
 .landingText h1{
     font-size: 6vw;
     margin: 0 !important;
@@ -104,6 +108,7 @@ html,body{
 
 .daHeader h1 {
     color: #AF72FE;
+    text-shadow: 0 5px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09);
     font-family: "Poppins", kindergarten;
     font-weight: bold;
 }
@@ -123,21 +128,21 @@ html,body{
     height: 200px;
     width: 350px;
     border-radius: 20px;
-    background: #e0d4f0;
-    box-shadow: 0 10px 22px rgba(0,0,0,0.09), 0 10px 10px rgba(0,0,0,0.09)
+    background: #ffffff;
+    box-shadow: 0 10px 10px #AF72FE, 0 20px 50px rgba(0,0,0,0.09)
 }
 
 .daCards .one .cardoneImg{
     width: 160px;
     position: absolute;
-    top: -80px;
-    right: -70px;
+    top: -100px;
+    right: -30px;
 }
 .daCards .two .cardtwoImg{
     width: 150px;
     position: absolute;
-    top: -70px;
-    right: -50px;
+    top: -80px;
+    right: -20px;
 }
 
 /* .cardbgone{
@@ -398,6 +403,8 @@ li p{
     color: #ffffff;
     font-size: 12px;
     padding: 8px 12px;
+    margin-left: 40px;
+    margin-top: 10px;
     position: absolute;
     border-radius: 20px;
     background-color: #B191FC;
